# convolution

./: .gitignore
cmake_learn/: CMakeLists.txt  main.cpp
cmake_learn/include/: my_fun.hpp
cmake_learn/lib/: CMakeLists.txt  MyLib.lib
cmake_learn/src/: my_fun.cpp
dz_chapter_4/: task_10.cpp  task_3.cpp  task_6.cpp  task_7.cpp
skill_book/: 1_1.cpp  1_10.cpp  1_11.2.cpp  1_11.cpp  1_2.cpp  1_3.cpp  1_4.cpp  1_5.cpp  1_6.cpp
